_sass/_theme-dark.scss
$dark-100: $dark;
$dark-300: #2c3032;
$dark-600: #242526;
$dark-900: #121212;

[data-theme="dark"] {
  body {
    background-color: $dark-900;
    color: $text-white;
  }

  // Code blocks & Syntax highlighting

  @import "native.scss";

  pre,
  code.highlighter-rouge {
    @extend .highlight;
    border: none;
  }

  .gist {
    filter: invert(90%) hue-rotate(180deg);
  }

  // Inputs
  input {
    background-color: $dark-300;
    border-color: $dark-100;
    color: $dark-900;

    &::placeholder {
      color: rgba($text-white, 0.64);
    }

    &:focus {
      background-color: $dark-600;
      color: $text-white;
    }
  }

  // Cards
  .card {
    background-color: #121212;
  }

  .card.border {
    .card-footer {
      background-color: rgba(0, 0, 0, 0.1);
    }
  }

  // Tables
  table:not(.highlight) {
    td {
      border-color: $dark-600;
    }

    tr:nth-child(even) {
      background-color: $dark;
    }
  }

  // Lists
  .list-group-item-action {
    background-color: $dark-600;
    color: $text-white;

    &:hover,
    &:focus {
      background-color: darken($color: $dark-600, $amount: 3);
    }
  }

  // Post
  .post footer {
    text-decoration: none;
  }

  // Timeline 
  .timeline-body .timeline-item:after{
    background-color: $dark-900;
  }
 
.branding{
    path{
      fill: white;
    }
}

.text-muted{
  color: rgba(235,240,251,0.85) !important;
}

.social{
  color: #ebf0fbd9 !important;
}

.nav-item{
  color: rgba(235,240,251,0.85) !important;
}
.article{
  blockquote{
    color: #d4d4d4 !important;
      }
  }

  a:not(.btn):not([class^="carousel-"]):not([class^="list-"]):not(.no-underline):not(.account):not(.tweet-icon):not(.tweet-foot):not(.nav-item){
    color: #000201;
    text-decoration-color: #89ffdd9c;
  }

  .social-icon{
    fill: #ebf0fbd9 !important;
    &:hover{
      fill: #43d6b5 !important;
  }
  }
  .icon-svg-themed{
    fill: #ffffff !important;
}
.book-premium{
  color: #28bca3 !important;
}
}

